# kani

./: Cargo.toml  README.md  lean-array-set-1.rs
bookrunner/: index.html
bookrunner/pipelines/tests/bookrunner/books/Rust by Example/Expressions/16.rs/: index.html
bookrunner/pipelines/tests/bookrunner/books/Rust by Example/Expressions/33.rs/: index.html
bookrunner/pipelines/tests/bookrunner/books/Rust by Example/Expressions/5.rs/: index.html
bookrunner/pipelines/tests/bookrunner/books/Rust by Example/Traits/11.rs/: index.html
cprover_bindings/src/goto_program/: expr.rs
crates/: .rustc_info.json  .rustdoc_fingerprint.json
crates/doc/: help.html  search-index.js  settings.html
crates/doc/kani/: all.html  attr.ensures.html  attr.proof.html  attr.proof_for_contract.html  attr.requires.html  attr.should_panic.html  attr.solver.html  attr.stub.html  attr.stub_verified.html  attr.unwind.html  derive.Arbitrary.html  fn.any.html  fn.any_where.html  fn.assert.html  fn.assume.html  fn.concrete_playback_run.html  fn.cover.html  index.html  macro.cover.html  macro.implies.html
crates/doc/kani/arbitrary/: index.html  trait.Arbitrary.html
crates/doc/kani/contracts/: attr.ensures.html  attr.proof_for_contract.html  attr.requires.html  attr.stub_verified.html  index.html
crates/doc/kani/futures/: enum.SchedulingAssumption.html  fn.block_on.html  fn.block_on_with_spawn.html  fn.spawn.html  fn.yield_now.html  index.html  struct.JoinHandle.html  struct.RoundRobin.html  trait.SchedulingStrategy.html
crates/doc/kani/slice/: fn.any_slice_of_array.html  fn.any_slice_of_array_mut.html  index.html
crates/doc/kani/tuple/: index.html
crates/doc/kani/vec/: fn.any_vec.html  fn.exact_vec.html  index.html
crates/doc/src/kani/: arbitrary.rs.html  contracts.rs.html  futures.rs.html  lib.rs.html  slice.rs.html  tuple.rs.html  vec.rs.html
crates/doc/src/kani/models/: mod.rs.html
kani-compiler/: Cargo.toml
kani-compiler/src/: args.rs  kani_compiler.rs  main.rs
kani-compiler/src/codegen_cprover_gotoc/codegen/: statement.rs
kani-compiler/src/codegen_lean/: compiler_interface.rs  mod.rs
kani-compiler/src/codegen_lean/context/: kani_intrinsic.rs  lean_ctx.rs  mod.rs
kani-driver/src/: call_single_file.rs  project.rs
kani_metadata/src/: unstable.rs
lean_ast/: Cargo.toml
lean_ast/src/: lib.rs
lean_ast/src/lean_program/: mod.rs  writer.rs
(+674 files in other folders)
